Added webpack test to load svg files, tried animated, displaying but not rendering. Assuming it has something to do with the deprecated styling of the animation, static svg icon files seem good try those for icons

--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "react-dom": "^16.13.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "devDependencies": {
+    "react-inlinesvg": "^1.2.0",
+    "svg-inline-loader": "^0.8.2"
   }
 }
